--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "json-server": "^0.17.1",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "styled-components": "^5.3.6",
